# stm32f429-blinky

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  stm32-blinky.ioc
Blinky/: projectMain.cpp
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  system_stm32f4xx.c
CubeMX/: Makefile
Drivers/CMSIS/Core/Include/: cmsis_gcc.h  core_armv8mml.h  core_cm3.h  core_cm33.h  core_cm7.h  core_sc300.h
Drivers/CMSIS/Core_A/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_gcc.h  core_ca.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/: fir_interpolate.c
Drivers/CMSIS/DSP/Examples/ARM/arm_class_marks_example/: arm_class_marks_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example/: arm_convolution_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_dotproduct_example/: arm_dotproduct_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_fft_bin_example/: arm_fft_bin_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example/: arm_fir_example_f32.c  math_helper.c
Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/: arm_graphic_equalizer_example_q31.c
Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/: arm_linear_interp_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example/: arm_matrix_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example/: arm_signal_converge_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_sin_cos_example/: arm_sin_cos_example_f32.c
Drivers/CMSIS/DSP/Examples/ARM/arm_variance_example/: arm_variance_example_f32.c
Drivers/CMSIS/DSP/Source/FilteringFunctions/: arm_conv_partial_f32.c  arm_conv_partial_fast_q15.c  arm_conv_partial_fast_q31.c  arm_conv_partial_q15.c  arm_conv_partial_q31.c  arm_conv_partial_q7.c  arm_fir_interpolate_q15.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f429xx.h  stm32f4xx.h  system_stm32f4xx.h
Drivers/CMSIS/Include/: cmsis_armcc.h  core_cm4.h
Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/: arm_nnexamples_cifar10.cpp  arm_nnexamples_cifar10_inputs.h  arm_nnexamples_cifar10_weights.h
Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/: arm_nnexamples_gru.cpp  arm_nnexamples_gru_test_data.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_dsi.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hcd.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_ltdc.h  stm32f4xx_hal_ltdc_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_sdram.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_fmc.h  stm32f4xx_ll_usb.h
Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_crc.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma2d.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_dsi.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2c_ex.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_ltdc_ex.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_pwr_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_sdram.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_hal_uart.c  stm32f4xx_ll_fmc.c  stm32f4xx_ll_usb.c
Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc/: usbh_cdc.h
Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/: usbh_cdc.c
Middlewares/ST/STM32_USB_Host_Library/Core/Inc/: usbh_core.h  usbh_ctlreq.h  usbh_def.h  usbh_ioreq.h  usbh_pipes.h
Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.c  usbh_ctlreq.c  usbh_ioreq.c  usbh_pipes.c
USB_HOST/App/: usb_host.c  usb_host.h
